# aos_tools

./: .gitignore  LICENSE  README.md  bcp.http  list_extractor.py  manage.py  pyproject.toml  tsn.http
.github/workflows/: black.yml  django.yml
aos_tools/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
data/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
data/management/commands/: detect_faction.py  (+8 more)
data/migrations/: 0001_initial.py  0002_participant_army_source_id.py  0003_list.py  0004_event_rounds.py  0005_pairing.py  0006_pairing_event.py  0007_pairing_source_id_pairing_source_json.py  0008_alter_pairing_player1_alter_pairing_player2.py  0009_participant_army_id.py  0010_alter_list_participant.py  0011_alter_list_player_created_at_and_more.py  0012_alter_pairing_event.py  0013_list_faction_list_faction_id_list_ghb_list_ghb_id_and_more.py  0014_remove_list_faction_id_remove_list_subfaction_id_and_more.py  0015_remove_list_ghb_remove_list_ghb_id_event_season.py  0016_alter_event_season.py  0017_alter_event_rounds.py  0018_pairing_gpt_parse_error_pairing_gpt_parsed_and_more.py  0019_remove_pairing_gpt_parse_error_and_more.py  0020_alter_list_faction_alter_list_grand_strategy_and_more.py  0021_event_game_type.py  0022_alter_event_name_alter_event_source_id_and_more.py  0023_alter_list_faction.py  0024_auto_20240207_2254.py  0025_pairing_scenario.py  0026_list_drops_list_manifestation_lore_list_points_and_more.py  0027_remove_pairing_player1_remove_pairing_player1_list_and_more.py  0028_alter_event_options_alter_list_options_and_more.py  0029_alter_list_subfaction.py  0030_alter_list_faction_alter_pairing_loser_score_and_more.py
lists/: models.py
lists/migrations/: 0001_initial.py  0002_even_created_at_even_updated_at.py  0003_rename_even_event_and_more.py  0004_event_players_count.py
(+1 files in other folders)
