[tool.poetry]
name = "aos-tools"
version = "0.1.0"
description = ""
authors = ["Tymoteusz Paul <puciek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.10"
requests = "^2.32.0"
pandas = "1.5.3"
psycopg2 = "^2.9.9"
celery = "^5.4.0"
django-kombu = "^0.9.4"
kombu = "^5.3.7"
django-celery-results = "^2.5.1"
flower = "^2.0.1"
eventlet = "^0.36.1"
openpyxl = "^3.1.3"
black = "^24.4.2"
gql = {extras = ["aiohttp"], version = "^3.5.0"}
redis = "^5.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
