[tool.poetry]
name = "aos-tools"
version = "0.1.0"
description = ""
authors = ["Tymoteusz Paul <puciek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "~4.2"
requests = "~2.32"
pandas = "~1.5"
psycopg2 = "~2.9"
celery = "~5.4"
django-kombu = "~0.9"
kombu = "~5.3"
django-celery-results = "~2.5"
flower = "~2.0"
eventlet = "~0.36"
openpyxl = "~3.1"
black = "~24.4"
gql = {extras = ["aiohttp"], version = "~3.5"}
redis = "~5.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
